OFJ-1200 Error when viewing an artifact supplied by a deleted user
Add codes to check user object isset before get its property.

--- a/application/modules/default/views/scripts/incident/artifacts.phtml
+++ b/application/modules/default/views/scripts/incident/artifacts.phtml
@@ -32,7 +32,10 @@ Fisma_Format_Section::startSection('Artifacts');
                     <?php echo $this->escape($artifact['fileSize']); ?>
                 </td>
                 <td>
-                    <?php echo $this->escape($this->userInfo($artifact['User']['username']), 'none'); ?>
+                    <?php
+                        $username = !empty($artifact['User']['username']) ? $artifact['User']['username'] : '';
+                        echo $this->escape($this->userInfo($username), 'none');
+                    ?>
                 </td>
                 <td>
                     <?php echo $this->escape($artifact['createdTs']); ?>
