OFJ-1151 Multiline comments are displayed without newlines
1. Add a formatter formatTextToHtml to TableFormat.js and apply formatTextToHtml to comment field at YUI table.
2. Apply textToHtml function to comment field when is not dispayed with YUI table.

--- a/application/modules/default/views/scripts/incident/artifacts.phtml
+++ b/application/modules/default/views/scripts/incident/artifacts.phtml
@@ -61,7 +61,7 @@ YAHOO.util.Event.onContentReady('artifacts', function() {
         {key:'size', label:'Size', sortable:true},
         {key:'uploadedBy', label:'Uploaded By', formatter:'html', sortable:true},
         {key:'uploadDate', label:'Upload Date', sortable:true},
-        {key:'comment', label:'Comment', sortable:false}        
+        {key:'comment', label:'Comment', sortable:false, formatter:Fisma.TableFormat.formatTextToHtml}
     ];
 
     this.myDataSource = new YAHOO.util.DataSource(YAHOO.util.Dom.get("artifactsTable"));
