--- a/application/modules/default/views/scripts/system-document/view.phtml
+++ b/application/modules/default/views/scripts/system-document/view.phtml
@@ -5,7 +5,6 @@ $sectionName = "{$this->escape($this->document->DocumentType->name)} "
              . "for {$this->escape($this->document->System->Organization->name)}";
 Fisma_Format_Section::startSection($sectionName);
 ?>
-    
 <table class="keyValues">
     <tr>
         <td>File Name:</td>
@@ -49,35 +48,58 @@ Fisma_Format_Section::startSection($sectionName);
     </tr>
 </table>
 
-
 <?php 
     Fisma_Format_Section::stopSection(); 
     Fisma_Format_Section::startSection('Version History'); 
 ?>
 
-<table class="systemDocuments">
-    <tr>
-        <th>File Name</th><th>Version</th><th>Version Notes</th>
-    </tr>
-<?php
-    foreach ($this->versionHistory as $history) {
-        $url = '/system-document/download/id/' . $history->id . '/version/' . $history->version;
-?>
-    <tr><td>
-        <a href="<?php echo $this->escape($url)?>">
-            <?php echo $this->escape($history->fileName); ?>
-        </a>
-    </td>
-    <td>
-        <?php echo $this->escape($history->version); ?>
-    </td>
-    <td>
-        <?php echo $this->escape($history->description); ?>
-    </td></tr>
-<?php
-    }
-?>
-</table>
+<div id='systemDocumentHistory'>
+    <table class="systemDocuments" id='systemDocumentHistoryTable'>
+    <?php
+        foreach ($this->versionHistory as $history) {
+            $url = '/system-document/download/id/' . $history->id . '/version/' . $history->version;
+    ?>
+        <tr>
+            <td>
+                <a href="<?php echo $this->escape($url)?>">
+                <?php echo $this->escape($history->fileName); ?>
+                </a>
+           </td>
+           <td>
+               <?php echo $this->escape($history->version); ?>
+           </td>
+           <td>
+               <?php echo $this->escape($history->description); ?>
+           </td>
+        </tr>
+    <?php
+        }
+    ?>
+    </table>
+</div>
 <?php 
     Fisma_Format_Section::stopSection();
 ?>
+
+<script type="text/javascript">
+YAHOO.util.Event.onContentReady('systemDocumentHistory', function() {
+    var myColumnDefs = [
+        {key:'fileName', label:'File Name', sortable:false},
+        {key:'version', label:'Version', sortable:true},
+        {key:'description', label:'Version Notes', sortable:false, formatter:Fisma.TableFormat.formatTextToHtml}
+    ];
+
+    this.myDataSource = new YAHOO.util.DataSource(YAHOO.util.Dom.get("systemDocumentHistoryTable"));
+    this.myDataSource.responseType = YAHOO.util.DataSource.TYPE_HTMLTABLE;
+    this.myDataSource.responseSchema = {
+        fields: [
+            {key:'fileName'},
+            {key:'version'},
+            {key:'description'}
+        ]
+    };
+
+    this.myDataTable = new YAHOO.widget.DataTable("systemDocumentHistory", myColumnDefs, this.myDataSource, {});
+});
+
+</script>
