--- a/application/modules/default/views/scripts/system/artifacts.phtml
+++ b/application/modules/default/views/scripts/system/artifacts.phtml
@@ -3,45 +3,76 @@ echo $this->escape($this->uploadPanelButton, 'none');
 
 Fisma_Format_Section::startSection('System Documentation');
 ?>
+<div id="systemDocumentArtifacts">
+    <table border="1" class="systemDocuments" id="systemDocumentArtifactTable">
+    <?php
+        foreach ($this->documents as $document) {
+    ?>
+        <tr>
+            <td>
+                <a href="/system-document/download/id/<?php echo $this->escape($document->id)?>">
+                    <img src="<?php echo $this->escape($document->getIconUrl())?>">
+                    <div><?php echo $this->escape($document->DocumentType->name)?></div>
+                </a>
+            </td>
+            <td>
+                <?php echo $this->escape($document->getSizeKb())?>
+            </td>
+            <td align='center'>
+                <?php echo $this->escape($document->version)?>
+            </td>
+            <td>
+                <?php echo $this->escape($document->description)?>
+            </td>
+            <td>
+                <?php echo $this->escape($this->userInfo($document->User->username), 'none'); ?>
+            </td>
+            <td>
+                <?php echo $this->escape($document['updated_at'])?>
+            </td>
+            <td>
+                <a href='/system-document/view/id/<?php echo $this->escape($document->id)?>'>
+                    Version History
+                </a>
+            </td>
+        </tr>
+    <?php
+        }
+    ?>
 
-<table border="1" class="systemDocuments">
-    <tr>
-        <th>File Name</th>
-        <th>Size</th>
-        <th>Version</th>
-        <th>Version Notes</th>
-        <th>Last Modified By User</th>
-        <th>Last Modified Date</th>
-        <th>View History</th>
-    </tr>
-
-<?php
-foreach ($this->documents as $document) {
-?>
-    <tr>
-        <td>
-            <a href="/system-document/download/id/<?php echo $this->escape($document->id)?>">
-                <img src="<?php echo $this->escape($document->getIconUrl())?>">
-                <div><?php echo $this->escape($document->DocumentType->name)?></div>
-            </a>
-        </td>
-        <td><?php echo $this->escape($document->getSizeKb())?></td>
-        <td align='center'><?php echo $this->escape($document->version)?></td>
-        <td><?php echo $this->escape($document->description)?></td>
-        <td><?php echo $this->escape($this->userInfo($document->User->username), 'none'); ?></td>
-        <td><?php echo $this->escape($document['updated_at'])?></td>
-        <td>
-            <a href='/system-document/view/id/<?php echo $this->escape($document->id)?>'>
-                Version History
-            </a>
-        </td>
-    </tr>
-<?php
-}
-?>
-
-</table>
-
+    </table>
+</div>
 <?php
 Fisma_Format_Section::stopSection();
 ?>
+
+<script type="text/javascript">
+YAHOO.util.Event.onContentReady('systemDocumentArtifacts', function() {
+    var myColumnDefs = [
+        {key:'fileName', label:'File Name', sortable:true},
+        {key:'size', label:'Size', sortable:false},
+        {key:'version', label:'Version', sortable:false},
+        {key:'description', label:'Version Notes', sortable:false, formatter:Fisma.TableFormat.formatTextToHtml},
+        {key:'username', label:'Last Modified By User', sortable:true},
+        {key:'update_at', label:'Last Modified Date', sortable:false},
+        {key:'id', label:'View History', sortable:false}
+    ];
+
+    this.myDataSource = new YAHOO.util.DataSource(YAHOO.util.Dom.get("systemDocumentArtifactTable"));
+    this.myDataSource.responseType = YAHOO.util.DataSource.TYPE_HTMLTABLE;
+    this.myDataSource.responseSchema = {
+        fields: [
+            {key:'fileName'},
+            {key:'size'},
+            {key:'version'},
+            {key:'description'},
+            {key:'username'},
+            {key:'update_at'},
+            {key:'id'}
+        ]
+    };
+
+    this.myDataTable = new YAHOO.widget.DataTable("systemDocumentArtifacts", myColumnDefs, this.myDataSource, {});
+});
+
+</script>
